fix text overflow for name

--- a/styles/side-panel.scss
+++ b/styles/side-panel.scss
@@ -28,12 +28,17 @@
   background-color:rgb(227, 229, 235);
   padding-bottom: 1.2rem;
   border-bottom: solid 0.1rem rgb(221, 225, 236);
+
 }
 
 .user-welcome p {
-  font-size: 2.2rem;
+  font-size: 2rem;
+  padding-bottom: 0.1rem;
   margin-top: 1.7rem;
   margin-bottom: 0.5rem;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .user-action-buttons {
